@@ -33,7 +33,7 @@ public class Parallel extends TransitionTarget {
     /**
      * Serial version UID.
      */
-    private static final long serialVersionUID = 1L;
+    private static final long serialVersionUID = 2L;
 
     /**
      * The set of parallel state machines contained in this &lt;parallel&gt;.
