@@ -34,7 +34,7 @@ public class SCXML implements Serializable {
     /**
      * Serial version UID.
      */
-    private static final long serialVersionUID = 1L;
+    private static final long serialVersionUID = 2L;
 
     /**
      * The SCXML XMLNS.
